sonarqube/2-nfs-sonar-provisioner.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-sonar-provisioner
  namespace: sonar
  labels:
    app: nfs-sonar-provisioner
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-sonar-provisioner
  template:
    metadata:
      labels:
        app: nfs-sonar-provisioner
    spec:
      serviceAccountName: nfs-sonar-provisioner
      containers:
        - name: nfs-sonar-provisioner
          image: registry.k8s.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2
          volumeMounts:
            - name: nfs-sonar-root
              mountPath: /persistentvolumes
      volumes:
        - name: nfs-sonar-root
          nfs:
            server: 192.168.1.179
            path: /var/nfs/k8s
