sonarqube/8-sonar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: sonar
spec:
  selector:
    matchLabels:
      app: sonarqube
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: bitnami/sonarqube:25
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          securityContext:
            runAsGroup: 1001
            runAsUser: 1001
          volumeMounts:
          - mountPath: "/opt/bitnami/sonarqube/data"
            name: sonar-data
          - mountPath: "/opt/bitnami/sonarqube/extensions"
            name: sonar-extensions
          - mountPath: /opt/bitnami/sonarqube/logs
            name: sonar-logs
          ports:
          - containerPort: 9000
            protocol: TCP
      volumes:
      - name: sonar-data
        persistentVolumeClaim:
          claimName: sonar-nfs-pvc
      - name: sonar-extensions
        persistentVolumeClaim:
          claimName: sonar-extensions-nfs-pvc
      - name: sonar-logs
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonar-service
  namespace: sonar
spec:
  ports:
    - name: sonar
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: sonarqube
  type: ClusterIP
