sonarqube/netpolicy.yaml
###############################################################
###
### WAS NOT DEPLOYED
### ELASTIC WAS CRASHING, CONNECTON TO PORT 9001 REFUSED
###
###############################################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: sonar
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns # check "kubectl get pods -n kube-system --show-labels" 
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
